centrage du contenu et encore modif README.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
-<body>
+<body class="centrer">
 
   <h1 class="text-center">Memento mori</h1>
   <div>
